src/compiler/SourceLanguageParser.java
// Generated from M:/CE305/The Small Compiler/src/compiler\SourceLanguage.g4 by ANTLR 4.12.0
package compiler;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SourceLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASSIGN_OPERATOR=1, MINUSMINUS=2, PLUSPLUS=3, NULL=4, BOOLEAN=5, IF=6, 
		ELSEIF=7, ELSE=8, WHILE=9, FOR=10, LPAREN=11, RPAREN=12, LCURLY=13, RCURLY=14, 
		EQUALS=15, EQUAL_TO=16, NOT_EQUAL=17, GREATER_THAN=18, GREATER_THAN_EQUAL=19, 
		LESS_THAN=20, LESS_THAN_EQUAL=21, NOT=22, AND=23, OR=24, MULTIPLY=25, 
		INDICES=26, DIVISION=27, REMAINDER=28, PLUS=29, MINUS=30, SEMI_COLON=31, 
		DECIMAL=32, METHOD=33, COMMA=34, RETURN=35, TYPE=36, ID=37, NUMBER=38, 
		STRING=39, DIGITS=40, WS=41, NEWL=42, COMMENT=43, CHARACTER=44;
	public static final int
		RULE_program = 0, RULE_stat = 1, RULE_statement = 2, RULE_set_variable = 3, 
		RULE_if_Statement = 4, RULE_def_method = 5, RULE_set_parameter = 6, RULE_set_function_Parameter = 7, 
		RULE_method = 8, RULE_while_Statement = 9, RULE_for_Statement = 10, RULE_expression = 11, 
		RULE_name = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "stat", "statement", "set_variable", "if_Statement", "def_method", 
			"set_parameter", "set_function_Parameter", "method", "while_Statement", 
			"for_Statement", "expression", "name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'null'", null, "'if'", "'elif'", "'else'", "'while'", 
			"'for'", "'('", "')'", "'{'", "'}'", "'='", "'=='", "'!='", "'>'", "'>='", 
			"'<'", "'<='", "'!'", "'and'", "'or'", "'*'", "'^'", "'/'", "'%'", "'+'", 
			"'-'", "';'", "'.'", "'method'", "','", "'ret'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ASSIGN_OPERATOR", "MINUSMINUS", "PLUSPLUS", "NULL", "BOOLEAN", 
			"IF", "ELSEIF", "ELSE", "WHILE", "FOR", "LPAREN", "RPAREN", "LCURLY", 
			"RCURLY", "EQUALS", "EQUAL_TO", "NOT_EQUAL", "GREATER_THAN", "GREATER_THAN_EQUAL", 
			"LESS_THAN", "LESS_THAN_EQUAL", "NOT", "AND", "OR", "MULTIPLY", "INDICES", 
			"DIVISION", "REMAINDER", "PLUS", "MINUS", "SEMI_COLON", "DECIMAL", "METHOD", 
			"COMMA", "RETURN", "TYPE", "ID", "NUMBER", "STRING", "DIGITS", "WS", 
			"NEWL", "COMMENT", "CHARACTER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SourceLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SourceLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SourceLanguageParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SourceLanguageVisitor ) return ((SourceLanguageVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			stat();
			setState(27);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatContext extends ParserRuleContext {
		public List<TerminalNode> NEWL() { return getTokens(SourceLanguageParser.NEWL); }
		public TerminalNode NEWL(int i) {
			return getToken(SourceLanguageParser.NEWL, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SourceLanguageVisitor ) return ((SourceLanguageVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		int _la;
		try {
			int _alt;
			setState(53);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(32);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(29);
						match(NEWL);
						}
						} 
					}
					setState(34);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(38);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==NEWL) {
							{
							{
							setState(35);
							match(NEWL);
							}
							}
							setState(40);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(41);
						statement();
						setState(45);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
						while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
							if ( _alt==1 ) {
								{
								{
								setState(42);
								match(NEWL);
								}
								} 
							}
							setState(47);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
						}
						}
						} 
					}
					setState(52);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Set_variableContext set_variable() {
			return getRuleContext(Set_variableContext.class,0);
		}
		public If_StatementContext if_Statement() {
			return getRuleContext(If_StatementContext.class,0);
		}
		public While_StatementContext while_Statement() {
			return getRuleContext(While_StatementContext.class,0);
		}
		public For_StatementContext for_Statement() {
			return getRuleContext(For_StatementContext.class,0);
		}
		public Def_methodContext def_method() {
			return getRuleContext(Def_methodContext.class,0);
		}
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SourceLanguageVisitor ) return ((SourceLanguageVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(61);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				set_variable();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				if_Statement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				while_Statement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(58);
				for_Statement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(59);
				def_method();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(60);
				method();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Set_variableContext extends ParserRuleContext {
		public Set_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set_variable; }
	 
		public Set_variableContext() { }
		public void copyFrom(Set_variableContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclarationContext extends Set_variableContext {
		public Token identifier;
		public ExpressionContext expr;
		public TerminalNode ID() { return getToken(SourceLanguageParser.ID, 0); }
		public TerminalNode TYPE() { return getToken(SourceLanguageParser.TYPE, 0); }
		public TerminalNode EQUALS() { return getToken(SourceLanguageParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarDeclarationContext(Set_variableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).exitVarDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SourceLanguageVisitor ) return ((SourceLanguageVisitor<? extends T>)visitor).visitVarDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends Set_variableContext {
		public Token identifier;
		public ExpressionContext expr;
		public TerminalNode EQUALS() { return getToken(SourceLanguageParser.EQUALS, 0); }
		public TerminalNode ID() { return getToken(SourceLanguageParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentContext(Set_variableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SourceLanguageVisitor ) return ((SourceLanguageVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentOperatorsContext extends Set_variableContext {
		public Token identifier;
		public Token op;
		public ExpressionContext expr;
		public TerminalNode ID() { return getToken(SourceLanguageParser.ID, 0); }
		public TerminalNode ASSIGN_OPERATOR() { return getToken(SourceLanguageParser.ASSIGN_OPERATOR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentOperatorsContext(Set_variableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).enterAssignmentOperators(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).exitAssignmentOperators(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SourceLanguageVisitor ) return ((SourceLanguageVisitor<? extends T>)visitor).visitAssignmentOperators(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentIncDecContext extends Set_variableContext {
		public Token identifier;
		public Token op;
		public TerminalNode ID() { return getToken(SourceLanguageParser.ID, 0); }
		public TerminalNode PLUSPLUS() { return getToken(SourceLanguageParser.PLUSPLUS, 0); }
		public TerminalNode MINUSMINUS() { return getToken(SourceLanguageParser.MINUSMINUS, 0); }
		public AssignmentIncDecContext(Set_variableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).enterAssignmentIncDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).exitAssignmentIncDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SourceLanguageVisitor ) return ((SourceLanguageVisitor<? extends T>)visitor).visitAssignmentIncDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Set_variableContext set_variable() throws RecognitionException {
		Set_variableContext _localctx = new Set_variableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_set_variable);
		int _la;
		try {
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new VarDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TYPE) {
					{
					setState(63);
					match(TYPE);
					}
				}

				setState(66);
				((VarDeclarationContext)_localctx).identifier = match(ID);
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EQUALS) {
					{
					setState(67);
					match(EQUALS);
					setState(68);
					((VarDeclarationContext)_localctx).expr = expression(0);
					}
				}

				}
				break;
			case 2:
				_localctx = new AssignmentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				((AssignmentContext)_localctx).identifier = match(ID);
				setState(72);
				match(EQUALS);
				setState(73);
				((AssignmentContext)_localctx).expr = expression(0);
				}
				break;
			case 3:
				_localctx = new AssignmentOperatorsContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				((AssignmentOperatorsContext)_localctx).identifier = match(ID);
				setState(75);
				((AssignmentOperatorsContext)_localctx).op = match(ASSIGN_OPERATOR);
				setState(76);
				((AssignmentOperatorsContext)_localctx).expr = expression(0);
				}
				break;
			case 4:
				_localctx = new AssignmentIncDecContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(77);
				((AssignmentIncDecContext)_localctx).identifier = match(ID);
				setState(78);
				((AssignmentIncDecContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==MINUSMINUS || _la==PLUSPLUS) ) {
					((AssignmentIncDecContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class If_StatementContext extends ParserRuleContext {
		public StatContext elseBlock;
		public TerminalNode IF() { return getToken(SourceLanguageParser.IF, 0); }
		public List<TerminalNode> LPAREN() { return getTokens(SourceLanguageParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(SourceLanguageParser.LPAREN, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(SourceLanguageParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(SourceLanguageParser.RPAREN, i);
		}
		public List<TerminalNode> LCURLY() { return getTokens(SourceLanguageParser.LCURLY); }
		public TerminalNode LCURLY(int i) {
			return getToken(SourceLanguageParser.LCURLY, i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public List<TerminalNode> RCURLY() { return getTokens(SourceLanguageParser.RCURLY); }
		public TerminalNode RCURLY(int i) {
			return getToken(SourceLanguageParser.RCURLY, i);
		}
		public List<TerminalNode> NEWL() { return getTokens(SourceLanguageParser.NEWL); }
		public TerminalNode NEWL(int i) {
			return getToken(SourceLanguageParser.NEWL, i);
		}
		public List<TerminalNode> ELSEIF() { return getTokens(SourceLanguageParser.ELSEIF); }
		public TerminalNode ELSEIF(int i) {
			return getToken(SourceLanguageParser.ELSEIF, i);
		}
		public TerminalNode ELSE() { return getToken(SourceLanguageParser.ELSE, 0); }
		public If_StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_Statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).enterIf_Statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).exitIf_Statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SourceLanguageVisitor ) return ((SourceLanguageVisitor<? extends T>)visitor).visitIf_Statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_StatementContext if_Statement() throws RecognitionException {
		If_StatementContext _localctx = new If_StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_if_Statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(IF);
			setState(82);
			match(LPAREN);
			setState(83);
			expression(0);
			setState(84);
			match(RPAREN);
			setState(85);
			match(LCURLY);
			setState(86);
			stat();
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(87);
				match(NEWL);
				}
				break;
			}
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELSEIF) {
				{
				{
				setState(90);
				match(ELSEIF);
				setState(91);
				match(LPAREN);
				setState(92);
				expression(0);
				setState(93);
				match(RPAREN);
				setState(94);
				match(LCURLY);
				setState(95);
				stat();
				setState(96);
				match(RCURLY);
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(103);
				match(NEWL);
				}
				break;
			}
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(106);
				match(ELSE);
				setState(107);
				match(LCURLY);
				setState(108);
				((If_StatementContext)_localctx).elseBlock = stat();
				setState(109);
				match(RCURLY);
				}
			}

			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWL) {
				{
				setState(113);
				match(NEWL);
				}
			}

			setState(116);
			match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Def_methodContext extends ParserRuleContext {
		public NameContext identifier;
		public ExpressionContext returnValue;
		public TerminalNode METHOD() { return getToken(SourceLanguageParser.METHOD, 0); }
		public TerminalNode LPAREN() { return getToken(SourceLanguageParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(SourceLanguageParser.RPAREN, 0); }
		public TerminalNode LCURLY() { return getToken(SourceLanguageParser.LCURLY, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode RCURLY() { return getToken(SourceLanguageParser.RCURLY, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public Set_parameterContext set_parameter() {
			return getRuleContext(Set_parameterContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(SourceLanguageParser.RETURN, 0); }
		public List<TerminalNode> NEWL() { return getTokens(SourceLanguageParser.NEWL); }
		public TerminalNode NEWL(int i) {
			return getToken(SourceLanguageParser.NEWL, i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Def_methodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).enterDef_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SourceLanguageListener ) ((SourceLanguageListener)listener).exitDef_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SourceLanguageVisitor ) return ((SourceLanguageVisitor<? extends T>)visitor).visitDef_method(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Def_methodContext def_method() throws RecognitionException {
		Def_methodContext _localctx = new Def_methodContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_def_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(METHOD);
			setState(119);
			((Def_methodContext)_localctx).identifier = name();
			setState(120);
			match(LPAREN);
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(121);
				set_parameter();
				}
				break;
			}
			setState(124);
			match(RPAREN);
			setState(125);
			match(LCURLY);
			setState(126);
			stat();
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURN) {
				{
				setState(127);
				match(RETURN);
				setState(128);
				((Def_methodContext)_localctx).returnValue = expression(0);
				}
			}
